--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ function showSlides(n) {
 </div>
  
 		<div class="footer-left">
-          <img src="c:\Users\nilkomol\Downloads\Logomaker-Education-202068.jpg">
+          <img src="Logomaker-Education-202068.jpg">
 				<h3>About<span>Success</span></h3>
  
 				<p class="footer-links">
