--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ function showSlides(n) {
 
 <div id="about">
 <div id="text">
+	<h1>ABOUT</h1>		
 <p>It's all about me.About my Educational qulalification.And lots of things.My life story and also you can know who i am.<a href="ABCD.html">Read more</a></p></div>
 <div id="Great">
 <img src="A+.png">
